--- a/styles/Songitem.module.css
+++ b/styles/Songitem.module.css
@@ -2,27 +2,29 @@
   margin-top: 0;
   margin-left: 20px;
   display: grid;
-  grid-template-columns: 8% 92%;
-  grid-template-rows: 25% 75%;
-  grid-gap: 5px;
+  grid-template-columns: 5.2em 1fr;
+  grid-template-rows: 2.6em 2.6em;
+  grid-column-gap: 10px;
+  grid-template-areas:
+    "image title"
+    "image artist";
 }
 
 .song__image {
-  width: 5em;
-  height: 5em;
+  grid-area: image;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 15px;
 }
 
 .song__title {
-  font-weight: bold;
-  font-size: 10pt;
-  grid-area: 1 / 2;
+  grid-area: title;
+  align-self: end;
 }
 
 .song__artist {
-  font-size: 9pt;
-  grid-area: 2 / 2;
-  margin-bottom: 0;
+  grid-area: artist;
+  align-self: start;
   color: var(--secondary-font-color);
 }
